--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                     </div>
                 </div>
                 <div class="puzzle-reveal-text" id="puzzleRevealText">
-                    <p class="complete-line">...you complete me.</p>
+                    <p class="complete-line">...me completas.</p>
                     <p class="valentine-question">Quieres ser mi San Valentin?</p>
                     <button type="button" class="yes-only-btn" id="yesBtn">Yes</button>
                 </div>
